[package]
name = "ycl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.8.0"
stylist = { version = "0.11.0", features = ["yew"] }
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
wasm-bindgen = "0.2.83"
yew-hooks = "0.2.0"
web-sys = { version = "0.3.61", features = ["Document", "Element", "HtmlElement", "HtmlInputElement", "HtmlFormElement", "FormData"] }
chrono = { version = "0.4.23", features = ["wasmbind"] }
thiserror = "1.0.38"
indoc = "2.0.0"

[dev-dependencies]
web-sys = "0.3.60"
